deployment-scripts/kubernetes-kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multistreaming
  labels:
    app: multistreaming
spec:
  selector:
    matchLabels:
      app: multistreaming
  template:
    metadata:
      labels:
        app: multistreaming
    spec:
      containers:
      - name: multistreaming
        image: rajiteh/multistreaming-server:log-ffmpeg
        imagePullPolicy: Always
        volumeMounts:
        - name: config-volume
          mountPath: /rtmp-configuration.json
          subPath: rtmp-configuration.json
        ports:
        - containerPort: 80
        - containerPort: 1935
      volumes:
      - name: config-volume
        configMap:
          name: multistreaming-config
